--- a/Course-SpringMVCBootstrap/src/main/resources/application.properties
+++ b/Course-SpringMVCBootstrap/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.mvc.view.suffix=.jsp
 
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/persons?useSSL=false&serverTimezone=CET
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=user
 spring.datasource.password=user1234!@#$
-# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 # Hibernate ddl auto (create, create-drop, validate, update)
