--- a/Course-SpringMVCBootstrap/src/main/resources/application.properties
+++ b/Course-SpringMVCBootstrap/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=user
 spring.datasource.password=user1234!@#$
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.generate_statistics=true
+# spring.jpa.properties.hibernate.generate_statistics=true
 # Hibernate ddl auto (create, create-drop, validate, update)
